:bug: Fix: 쿼리 오류 수정 (#66)